# rules_jasmine

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  internal_deps.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/workflows/: README.md  bazelrc  config-cron.yaml  config.yaml
.aspect/workflows/terraform/: .terraform.lock.hcl  README.md  main.tf  workflows.tf
.bcr/: metadata.template.json  source.template.json
.github/workflows/: .aspect-workflows-reusable.yaml  BUILD.bazel  aspect-workflows-cron.yaml  aspect-workflows-delivery.yaml  aspect-workflows-warming.yaml  aspect-workflows.yaml  bazel6.bazelrc  bazel7.bazelrc  buildifier.yaml  ci.bazelrc  ci.yaml  deps.bzl  release.yaml  release.yml  release_prep.sh  workspace_snippet.sh
docs/: BUILD.bazel  jasmine_test.md  rules.md
e2e/jasmine_test/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  lib.spec.js  lib.test.js
e2e/simple/: lib.js
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  pnpm-lock.yaml
e2e/workspace/: BUILD  WORKSPACE  package.json
examples/commonjs/: BUILD.bazel  lib.js  lib.spec.js
examples/simple/: BUILD.bazel  lib.js  lib.spec.js
jasmine/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl
jasmine/private/: BUILD.bazel  jasmine_test.bzl  junit_reporter.js  runner.cjs  runner.js  versions.bzl
jasmine/private/v4.3.0/: defs.bzl  package.json  pnpm-lock.yaml  repositories.bzl
jasmine/private/v4.5.0/: package.json  pnpm-lock.yaml
jasmine/tests/: BUILD.bazel  cjs.test.cjs  config_file.js  config_file.test.js  def.bzl  esm.test.mjs  exclusions.test.js  failing.test.js  failing_shard.test.js  filtering.test.js  focused.test.js  junit_reporter.test.js  shard.test.js  stack.test.js  versions_test.bzl
jasmine/tests/fixed_args/: BUILD.bazel  fixed_args.test.js
jasmine/tests/jasmine4/: package.json
jasmine/tests/jasmine5/: BUILD.bazel  package.json
jasmine/tests/jasmine6/: package.json
scripts/: mirror_releases.sh
tools/: BUILD.bazel
