"aspect-build/rules_jasmine"

module(
    name = "aspect_rules_jasmine",
    compatibility_level = 1,
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.29.2")
bazel_dep(name = "aspect_rules_js", version = "1.23.2")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_nodejs", version = "5.8.2")
