load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

jasmine_test(
    name = "test",
    args = ["*.spec.js"],
    data = [
        "lib.js",
        "lib.spec.js",
        "lib.test.js",
        "package.json",
    ],
    node_modules = "//:node_modules",
)
