"Bazel dependencies"

local_path_override(
    module_name = "aspect_rules_jasmine",
    path = "../..",
)

bazel_dep(name = "aspect_rules_js", version = "1.37.1")

bazel_dep(name = "aspect_rules_jasmine", version = "0.0.0", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "@aspect_rules_jasmine//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
