load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["runner.js", "jasmine_test.bzl"])

# gazelle:exclude v*.*.*/*

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//jasmine:__subpackages__"],
    deps = [],
)

bzl_library(
    name = "jasmine_test",
    srcs = ["jasmine_test.bzl"],
    visibility = ["//jasmine:__subpackages__"],
    deps = ["@aspect_rules_js//js:libs"],
)
