load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "runner.cjs",
    "junit_reporter.cjs",
])

# gazelle:exclude v*.*.*/*

bzl_library(
    name = "jasmine_test",
    # keep
    srcs = [
        "jasmine_test.bzl",
    ],
    visibility = ["//jasmine:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_rules_js//js:libs",
    ],
)
