load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "runner.cjs",
    "junit_reporter.cjs",
])

bzl_library(
    name = "jasmine_test",
    # keep
    srcs = [
        "jasmine_test.bzl",
    ],
    visibility = ["//jasmine:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_rules_js//js:libs",
    ],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = ["//jasmine:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
