load("//jasmine:defs.bzl", "jasmine_test")

jasmine_test(
    name = "junit_reporter",
    args = [
        "**/*.test.js",
    ],
    data = ["junit_reporter.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "filtering",
    data = ["filtering.test.js"],
    expected_exit_code = 2,
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "config",
    config = "config_file.js",
    data = ["config_file.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "config_chdir_package_name",
    chdir = package_name(),
    config = "config_file.js",
    data = ["config_file.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "shard",
    args = [
        "**/*.test.js",
        "--random=false",
    ],
    data = ["shard.test.js"],
    node_modules = "//:node_modules",
    shard_count = 3,
)

jasmine_test(
    name = "failing_shard",
    args = [
        "**/*.test.js",
        "--random=false",
    ],
    data = ["failing_shard.test.js"],
    expected_exit_code = 3,
    node_modules = "//:node_modules",
    shard_count = 2,
)
