load("//jasmine:defs.bzl", "jasmine_test")

jasmine_test(
    name = "junit_reporter",
    args = [
        "**/*.test.js",
    ],
    data = ["junit_reporter.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "focused",
    data = ["focused.test.js"],
    args = [
        "**/*.test.js",
    ],
    expected_exit_code = 2,
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "exclusions",
    args = [
        "**/*.test.js",
    ],
    data = ["exclusions.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "config",
    config = "config_file.js",
    data = ["config_file.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "stack",
    data = ["stack.test.js"],
    args = [
        "**/*.test.js",
    ],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "config_chdir_package_name",
    chdir = package_name(),
    config = "config_file.js",
    data = ["config_file.test.js"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "shard",
    args = [
        "**/*.test.js",
        "--random=false",
    ],
    data = ["shard.test.js"],
    node_modules = "//:node_modules",
    shard_count = 3,
)

# Verify that the error code is propogated out from a failing spec
jasmine_test(
    name = "failing",
    args = [
        "**/*.test.js",
        "--random=false",
    ],
    data = ["failing.test.js"],
    expected_exit_code = 3,
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "failing_shard",
    args = [
        "**/*.test.js",
        "--random=false",
    ],
    data = ["failing.test.js"],
    expected_exit_code = 3,
    node_modules = "//:node_modules",
    shard_count = 2,
)

jasmine_test(
    name = "esm",
    args = [
        "**/*.test.mjs",
        "--random=false",
    ],
    data = ["esm.test.mjs"],
    node_modules = "//:node_modules",
)

jasmine_test(
    name = "cjs",
    args = [
        "**/*.test.cjs",
        "--random=false",
    ],
    data = ["cjs.test.cjs"],
    node_modules = "//:node_modules",
)