load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("//jasmine:defs.bzl", "jasmine_test")

copy_to_bin(
    name = "junit_reporter.test",
    srcs = ["junit_reporter.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "cjs.test",
    srcs = ["cjs.test.cjs"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "config_file.test",
    srcs = [
        "config_file.test.js",
    ],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "config_file",
    srcs = [
        "config_file.js",
    ],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "esm.test",
    srcs = ["esm.test.mjs"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "exclusions.test",
    srcs = ["exclusions.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "fixed_args.test",
    srcs = ["fixed_args.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "failing.test",
    srcs = ["failing.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "focused.test",
    srcs = ["focused.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "shard.test",
    srcs = ["shard.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

copy_to_bin(
    name = "stack.test",
    srcs = ["stack.test.js"],
    visibility = [
        "//jasmine/tests/jasmine4:__subpackages__",
        "//jasmine/tests/jasmine5:__subpackages__",
        "//jasmine/tests/jasmine6:__subpackages__",
    ],
)

jasmine_test(
    name = "config_chdir_package_name",
    chdir = package_name(),
    config = ":config_file.js",
    data = [
        ":config_file.js",
        ":config_file.test.js",
    ],
    node_modules = "//:node_modules",
)
