load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
load("//jasmine:defs.bzl", "jasmine_test")

jasmine_test(
    name = "test",
    args = ["**/*.test.js"],
    data = ["fixed_args.test.js"],
    fixed_args = ["--random=true"],
    node_modules = "//:node_modules",
)

# assert that the bash launcher script contains the fixed arg --random=true
assert_contains(
    name = "fixed_args_bash_launcher_test",
    actual = ":test",
    expected = "--random=true",
    target_compatible_with = select({
        # this test asserts the contents of the bash launcher so is disabled on Windows
        # since on Windows the default output of `:test` is the `.bat` wrapper
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
